# MessageTypeProject

./: CMakeLists.txt  README.md
include/: MessageType.h
src/: MessageType.cpp  main.cpp
tests/: test_MessageType.cpp
